# aeo-qfo-tracker

./: .env.example  .gitignore  LICENSE  README.md  app.py  cli.py  pyproject.toml  requirements.txt
data/: fixture_pages.jsonl  fixture_raw_runs.jsonl  sample_queries.csv
seo_suite/: __init__.py  aggregator.py  brand_mentions.py  content_alignment.py  io.py  matching.py  models.py  page_diagnostics.py  providers.py  reporting.py  runner.py  storage.py
tests/: test_aggregator.py  test_content_alignment.py  test_fanout_refocus.py  test_matching.py  test_page_diagnostics.py  test_storage.py
